完成了主页功能的开发

--- a/login.html
+++ b/login.html
@@ -23,6 +23,8 @@
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item layui-hide layui-show-md-inline-block">
                     <a href="javascript:;" class="userinfo">
+                        <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
+                            class="layui-nav-img">
 
                         <span class="text-avatar">A</span>
                     </a>
@@ -33,7 +35,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
-                    <a href="javascript:;">
+                    <a href="javascript:;" id="btnLoginout">
                         <span class="iconfont icon-tuichu" style="font-size: 12px;"></span>
                         退出
                     </a>
@@ -44,6 +46,8 @@
         <div class="layui-side layui-bg-black">
             <div class="layui-side-scroll">
                 <div class="userinfo">
+                    <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
+                        class="layui-nav-img">
                     <span class="text-avatar">A</span>
                     <span class="welcome">欢迎***</span>
                 </div>
